added info in pokeball row

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clone Site</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+        crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/styles/main.css">
 </head>
+
 <body>
     <section class="container-fluid">
         <div class="row image1">
@@ -30,7 +34,7 @@
                 <h5 class="main">Thunder Types</h5>
                 <h6 class="main2">A shocking and electrifying partner, electrical types are loyal partners.</h6>
                 <a class="btn btn-primary btn-small btn-warning" href="#" role="button">Join Thunder</a>
-            </div>    
+            </div>
             <div class="col">
                 <i class="fas fa-leaf icon"></i>
                 <h5 class="main">Grass Types</h5>
@@ -44,15 +48,28 @@
                 <a class="btn btn-primary btn-small btn-primary2" href="#" role="button">Join Water</a>
             </div>
         </div>
-        <div class="row">
-
+        <div class="row image-3">
+            <div class="col">
+                <h5 class="updates updates2">Trainer Updates</h5>
+                <p class="updates news">Get the latest news on pokemon sightings and prime locations!</p>
+                <form class="email">
+                    <input type="email" name="email">
+                </form>
+            </div>
+            <div class="col">
+                <h5 class="platforms">Follow Us</h5>
+                <i class="fab fa-twitter icon2"></i>
+                <i class="fab fa-instagram icon2"></i>
+                <i class="fab fa-facebook-f icon2"></i>
+            </div>
         </div>
         <div class="row">
 
         </div>
         <div class="row">
 
-        </div>  
+        </div>
     </section>
 </body>
+
 </html>
