--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
             <div class="col">
                 <h5 class="updates updates2">Trainer Updates</h5>
                 <p class="updates news">Get the latest news on pokemon sightings and prime locations!</p>
-                <form class="email">
-                    <input type="email" name="email">
-                </form>
+                <div class="input-group email">
+                    <input type="text" class="form-control" placeholder="pikachu@ichooseyou.com" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-danger" type="button">Submit</button>
+                    </div>
+                </div>
             </div>
             <div class="col">
                 <h5 class="platforms">Follow Us</h5>
