updated email label

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h5 class="updates updates2">Trainer Updates</h5>
                 <p class="updates news">Get the latest news on pokemon sightings and prime locations!</p>
                 <div class="input-group email">
-                    <input type="text" class="form-control" placeholder="pikachu@ichooseyou.com" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                    <input type="text" class="form-control" placeholder="pikachu@ichooseyou.com" aria-label="Recipient's Email" aria-describedby="basic-addon2">
                     <div class="input-group-append">
                         <button class="btn btn-outline-danger" type="button">Submit</button>
                     </div>
