added pokemon go section

--- a/index.html
+++ b/index.html
@@ -49,9 +49,21 @@
             </div>
         </div>
         <div class="row">
+                <div class="col empty">
 
+                </div>
+                <div class="card col image5 " style="width: 18rem;">
+                        <img class="card-img-top" src="/assets/gym-marker.png"  alt="go marker">
+                        <div class="card-body">
+                          <p class="card-text d-flex justify-content-center">Prime Locations for Pokemons in Pokemon Go.</p>
+                          <a href="#" class="btn btn-primary d-flex justify-content-center">Let's Go Somewhere</a>
+                        </div>
+                </div>
+                <div class="col empty">
+
+                </div>
         </div>
-        <div class="row image-4">
+        <div class="row image4">
             <div class="col">
                 <h5 class="updates updates2">Trainer Updates</h5>
                 <p class="updates news">Get the latest news on pokemon sightings and prime locations!</p>
@@ -64,9 +76,9 @@
             </div>
             <div class="col">
                 <h5 class="platforms">Follow Us</h5>
-                <i class="fab fa-twitter icon2"></i>
-                <i class="fab fa-instagram icon2"></i>
-                <i class="fab fa-facebook-f icon2"></i>
+                <a href=""><i class="fab fa-twitter icon2"></i></a>
+                <a href=""><i class="fab fa-instagram icon2"></i></a>
+                <a href=""><i class="fab fa-facebook-f icon2"></i></a>
             </div>
         </div>
     </section>
